packages/dartcv/src/gapi/gapi.h

CvStatus *gapi_mask(GMat src, GMat mask, GMat *rval);
CvStatus *gapi_mean(GMat src, GScalar *rval);
CvStatus *gapi_mul(GMat src1, GMat src2, double scale, int ddepth, GMat *rval);
CvStatus *gapi_mulC(GMat src, GScalar multiplier, int ddepth, GMat *rval);
CvStatus *gapi_mulC_1(GMat src, double multiplier, int ddepth, GMat *rval);
CvStatus *gapi_mulC_2(GScalar multiplier, GMat src, int ddepth, GMat *rval);
CvStatus *gapi_phase(GMat x, GMat y, bool angleInDegrees, GMat *rval);
CvStatus *gapi_polarToCart(GMat magnitude, GMat angle, bool angleInDegrees, GMat *rval);
CvStatus *gapi_gaussianBlur(const GMat src, const CvSize ksize, double sigmaX, double sigmaY, int borderType,
                            const Scalar borderValue, GMat *rval);
CvStatus *gapi_medianBlur(const GMat src, int ksize, GMat *rval);
CvStatus *gapi_morphologyEx(const GMat src, const int op, const Mat kernel, const CvPoint anchor,
                            const int iterations, const int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_goodFeaturesToTrack(const GMat image, int maxCorners, double qualityLevel, double minDistance,
                                   const Mat mask, int blockSize, bool useHarrisDetector, double k);
CvStatus *gapi_fitLine3D_3(const GArrayPoint3i src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine3D_4(const GMat src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_flip(const GMat src, int flipCode, GMat *rval);
CvStatus *gapi_merge3(const GMat src1, const GMat src2, const GMat src3, GMat *rval);
CvStatus *gapi_merge4(const GMat src1, const GMat src2, const GMat src3, const GMat src4, GMat *rval);
CvStatus *gapi_normalize(const GMat src, double alpha, double beta, int norm_type, int ddepth, GMat *rval);
CvStatus *gapi_remap(const GMat src, const Mat map1, const Mat map2, int interpolation, int borderMode,
                     const Scalar borderValue, GMat *rval);
CvStatus *gapi_resize(const GMat src, const CvSize dsize, double fx, double fy, int interpolation, GMat *rval);
CvStatus *gapi_resizeP(const GMat src, const CvSize dsize, int interpolation, GMat *rval);