packages/dartcv/lib/src/g/gapi.g.dart


  late final _gapi_fitLine3D_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint3i,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine3D_3');
  late final _gapi_fitLine3D_3 = _gapi_fitLine3D_3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint3i, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine3D_4(
    GMat src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine3D_4(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine3D_4Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
              ffi.Double, ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine3D_4');
  late final _gapi_fitLine3D_4 = _gapi_fitLine3D_4Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, double, double, double, ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_flip(
    GMat src,
    int flipCode,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_flip(
      src,
      flipCode,
      rval,
    );
  }

  late final _gapi_flipPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_flip');
  late final _gapi_flip = _gapi_flipPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_gaussianBlur(
    GMat src,
    CvSize ksize,
    double sigmaX,
    double sigmaY,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_gaussianBlur(
      src,
      ksize,
      sigmaX,
      sigmaY,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_gaussianBlurPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, CvSize, ffi.Double, ffi.Double,
              ffi.Int, Scalar, ffi.Pointer<GMat>)>>('gapi_gaussianBlur');
  late final _gapi_gaussianBlur = _gapi_gaussianBlurPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, CvSize, double, double, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_goodFeaturesToTrack(
    GMat image,
    int maxCorners,
    double qualityLevel,
    double minDistance,
    Mat mask,
    int blockSize,
    bool useHarrisDetector,
    double k,
  ) {
    return _gapi_goodFeaturesToTrack(
      image,
      maxCorners,
      qualityLevel,
      minDistance,
      mask,
      blockSize,
      useHarrisDetector,
      k,
    );
  }

  late final _gapi_goodFeaturesToTrackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
              Mat, ffi.Int, ffi.Bool, ffi.Double)>>('gapi_goodFeaturesToTrack');
  late final _gapi_goodFeaturesToTrack =
      _gapi_goodFeaturesToTrackPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, int, double, double, Mat, int, bool, double)>();

  ffi.Pointer<CvStatus> gapi_mask(
    GMat src,
    GMat mask,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_mask(
      src,
      mask,
      rval,
    );
  }

  late final _gapi_maskPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_mask');
  late final _gapi_mask = _gapi_maskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_mean(
    GMat src,
    ffi.Pointer<GScalar> rval,
  ) {
    return _gapi_mean(
      src,
      rval,
    );
  }

  late final _gapi_meanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GScalar>)>>('gapi_mean');
  late final _gapi_mean = _gapi_meanPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GScalar>)>();

  ffi.Pointer<CvStatus> gapi_medianBlur(
    GMat src,
    int ksize,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_medianBlur(
      src,
      ksize,
      rval,
    );
  }

  late final _gapi_medianBlurPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_medianBlur');
  late final _gapi_medianBlur = _gapi_medianBlurPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_merge3(
    GMat src1,
    GMat src2,
    GMat src3,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_merge3(
      src1,
      src2,
      src3,
      rval,
    );
  }

  late final _gapi_merge3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, GMat, ffi.Pointer<GMat>)>>('gapi_merge3');
  late final _gapi_merge3 = _gapi_merge3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_merge4(
    GMat src1,
    GMat src2,
    GMat src3,
    GMat src4,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_merge4(
      src1,
      src2,
      src3,
      src4,
      rval,
    );
  }

  late final _gapi_merge4Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, GMat, GMat, ffi.Pointer<GMat>)>>('gapi_merge4');
  late final _gapi_merge4 = _gapi_merge4Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_morphologyEx(
    GMat src,
    int op,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_morphologyEx(
      src,
      op,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_morphologyExPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, CvPoint, ffi.Int,
              ffi.Int, Scalar, ffi.Pointer<GMat>)>>('gapi_morphologyEx');
  late final _gapi_morphologyEx = _gapi_morphologyExPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, Mat, CvPoint, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_mul(
    GMat src1,
    GMat src2,
    double scale,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_mul(
      src1,
      src2,
      scale,
      ddepth,
      rval,
    );
  }

  late final _gapi_mulPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>>('gapi_mul');
  late final _gapi_mul = _gapi_mulPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_mulC(
    GMat src,
    GScalar multiplier,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_mulC(
      src,
      multiplier,
      ddepth,
      rval,
    );
  }

  late final _gapi_mulCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>>('gapi_mulC');
  late final _gapi_mulC = _gapi_mulCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GScalar, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_mulC_1(
    GMat src,
    double multiplier,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_mulC_1(
      src,
      multiplier,
      ddepth,
      rval,
    );
  }

  late final _gapi_mulC_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>>('gapi_mulC_1');
  late final _gapi_mulC_1 = _gapi_mulC_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_mulC_2(
    GScalar multiplier,
    GMat src,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_mulC_2(
      multiplier,
      src,
      ddepth,
      rval,
    );
  }

  late final _gapi_mulC_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_mulC_2');
  late final _gapi_mulC_2 = _gapi_mulC_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GScalar, GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_normalize(
    GMat src,
    double alpha,
    double beta,
    int norm_type,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_normalize(
      src,
      alpha,
      beta,
      norm_type,
      ddepth,
      rval,
    );
  }

  late final _gapi_normalizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Double, ffi.Double, ffi.Int,
              ffi.Int, ffi.Pointer<GMat>)>>('gapi_normalize');
  late final _gapi_normalize = _gapi_normalizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, double, double, int, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_phase(
    GMat x,
    GMat y,
    bool angleInDegrees,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_phase(
      x,
      y,
      angleInDegrees,
      rval,
    );
  }

  late final _gapi_phasePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Bool, ffi.Pointer<GMat>)>>('gapi_phase');
  late final _gapi_phase = _gapi_phasePtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, bool, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_polarToCart(
    GMat magnitude,
    GMat angle,
    bool angleInDegrees,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_polarToCart(
      magnitude,
      angle,
      angleInDegrees,
      rval,
    );
  }

  late final _gapi_polarToCartPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Bool, ffi.Pointer<GMat>)>>('gapi_polarToCart');
  late final _gapi_polarToCart = _gapi_polarToCartPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, bool, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_remap(
    GMat src,
    Mat map1,
    Mat map2,
    int interpolation,
    int borderMode,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_remap(
      src,
      map1,
      map2,
      interpolation,
      borderMode,
      borderValue,
      rval,
    );
  }

  late final _gapi_remapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, Mat, Mat, ffi.Int, ffi.Int,
              Scalar, ffi.Pointer<GMat>)>>('gapi_remap');
  late final _gapi_remap = _gapi_remapPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, Mat, Mat, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_resize(
    GMat src,
    CvSize dsize,
    double fx,
    double fy,
    int interpolation,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_resize(
      src,
      dsize,
      fx,
      fy,
      interpolation,
      rval,
    );
  }

  late final _gapi_resizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, CvSize, ffi.Double, ffi.Double,
              ffi.Int, ffi.Pointer<GMat>)>>('gapi_resize');
  late final _gapi_resize = _gapi_resizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, CvSize, double, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_resizeP(
    GMat src,
    CvSize dsize,
    int interpolation,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_resizeP(
      src,
      dsize,
      interpolation,
      rval,
    );
  }
